--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,15 +14,35 @@ body {
     background: linear-gradient(#1976d2, #9c27b0); 
 }
 
+section {
+    max-width: 85%;
+    margin: auto;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 15px;
+    transition: border 0.3s;
+}
+
+a:hover, a:focus {
+    border-bottom: 2px solid #fff;
+}
+
 .underline {
-    text-decoration: underline;
-    /* box-shadow: inset 0 -5px 0 0 #81aaea */
+    box-shadow: inset 0 -5px 0 0 #9c00ae6b;
+    line-height: 140%;
 }
 
 .introduction {
-    margin: auto;
-    margin-top: 10vh;
-    max-width: 85%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 15vh;
 }
 
 .introduction__title {
@@ -31,10 +51,11 @@ body {
 
 .introduction__supporting {
     margin-top: 10px;
+    margin-bottom: 0;
 }
 
 .headshot {
-    margin: 0;
+    margin: 0 1em;
 }
 
 .headshot__image {
@@ -45,6 +66,25 @@ body {
 
 .section-rule {
     max-width: 70%;
-    margin: 3em auto;
-    color: #fff;
+    margin: 2em auto;
+    border: 1px solid #bdbdbd;
+}
+
+.social-links {
+    text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+
+    body {
+        font-size: 1.3em;
+    }
+
+    .introduction {
+        margin-top: 25vh;
+    }
+
+    section {
+        max-width: 520px;
+    }
 }
